--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,7 +40,6 @@ ul {
     top: 0;
     left: 0;
     width: 100%;
-    /* height: calc(100dvh + 1%); */
     transition: opacity 0.5s ease;
     list-style-type: none;
     padding: 0;
@@ -63,7 +62,7 @@ ul {
 }
 
 div h3#iban {
-    margin: 16px 0;
+    margin: 24px 0;
 }
 
 #title-header {
@@ -112,13 +111,14 @@ img.icon-night {
 .sky-container {
     position: absolute;
     top: 0;
-    height: 85dvh !important;
+    height: 100dvh !important;
     width: 100%;
 }
 
 #sky_image {
-    height: 85dvh !important;
-    width: 100%;
+    height: 90%;
+    width: -webkit-fill-available;
+    object-fit: cover;
 }
 
 .background-section {
@@ -138,6 +138,7 @@ img.icon-night {
 /* CONTENEDORES GENERALES */
 
 #scrollContainer {
+    overflow-y: hidden!important;
     width: 100%;
     height: 100dvh;
     overflow-y: auto;
@@ -146,13 +147,13 @@ img.icon-night {
 }
 
 #list-container {
-    margin: 64px 32px;
+    margin: 64px 24px;
     height: auto;
     position: relative;
 }
 
 #first_ul {
-    margin-bottom: 4dvh;
+    margin-bottom: 5dvh;
 }
 
 .location_time {
@@ -184,7 +185,7 @@ img.icon-night {
 }
 
 .container_separator_horizontal {
-    height: calc(100dvh* 0.1);
+    height: 9dvh;
     display: flex;
 }
 
@@ -207,7 +208,12 @@ div span.separator_vertical {
 
 div span.separator_vertical,
 .container_separator_vertical {
-    height: 5dvh;
+    height: 4dvh;
+}
+
+div span.separator_vertical.last,
+.container_separator_vertical.last {
+    height: 10dvh;
 }
 
 
@@ -250,26 +256,6 @@ div span.after-dot {
 }
 
 /* GRADIENTS */
-
-.morning {
-    position: relative;
-    width: 100%;
-    background-image: linear-gradient(to top right, #80EDEB 0%, #FFFFF1 100%);
-    z-index: 1;
-}
-
-.morning:before {
-    position: absolute;
-    content: '';
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: linear-gradient(to top right, #80EDEB 0%, #FFFFF1 100%);
-    z-index: -1;
-    transition: opacity 0.5s linear;
-    opacity: 0;
-}
 
 .morning {
     position: relative;
