--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -30,19 +30,24 @@
     div span.separator_vertical.last, .container_separator_vertical.last {
         height: 20dvh;
     }
-
-    #fourth_ul {
-        height: 75dvh;
-    }
 }
 
 @media only screen and (min-device-height: 720px) and (max-device-height : 832px) and (orientation : portrait){
+    #first_ul {
+        margin-bottom: 14dvh;
+    }
     .container_separator_horizontal {
         height: 12dvh;
     }
     div span.separator_vertical,
     .container_separator_vertical {
         height: 10dvh;
+    }
+    div span.separator_vertical.last, .container_separator_vertical.last {
+        height: 20dvh;
+    }
+    #fourth_ul {
+        height: 75dvh;
     }
 }
 
