--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,7 +3,7 @@
 /* Estilos para móviles */
 /* HEIGHT */
 
-@media only screen and (min-device-height: 540px) and (max-device-height : 580px) and (orientation : portrait){
+@media only screen and (min-device-height: 540px) and (max-device-height : 580px){
     #first_ul {
         margin-bottom: 8dvh;
     }
@@ -16,7 +16,7 @@
     }
 }
 
-@media only screen and (min-device-height: 580px) and (max-device-height : 720px) and (orientation : portrait){
+@media only screen and (min-device-height: 580px) and (max-device-height : 720px){
     #first_ul {
         margin-bottom: 14dvh;
     }
@@ -32,7 +32,7 @@
     }
 }
 
-@media only screen and (min-device-height: 720px) and (max-device-height : 832px) and (orientation : portrait){
+@media only screen and (min-device-height: 720px) and (max-device-height : 832px){
     #first_ul {
         margin-bottom: 14dvh;
     }
@@ -51,7 +51,7 @@
     }
 }
 
-@media only screen and (min-device-height: 780px) and (max-device-height : 832px) and (orientation : portrait){
+@media only screen and (min-device-height: 780px) and (max-device-height : 832px){
     #first_ul {
         margin-bottom: 14dvh;
     }
@@ -65,7 +65,7 @@
 }
 
 
-@media only screen and (min-device-height: 832px) and (max-device-height : 952px) and (orientation : portrait){
+@media only screen and (min-device-height: 832px) and (max-device-height : 952px){
     #first_ul {
         margin-bottom: 14dvh;
     }
@@ -84,7 +84,7 @@
     }
 }
 
-@media only screen and (min-device-height: 952px) and (max-device-height : 1042px) and (orientation : portrait){
+@media only screen and (min-device-height: 952px) and (max-device-height : 1042px){
     #first_ul {
         margin-bottom: 14dvh;
     }
@@ -103,7 +103,7 @@
     }
 }
 
-@media only screen and (min-device-height: 1042px) and (max-device-height : 1150px) and (orientation : portrait){
+@media only screen and (min-device-height: 1042px) and (max-device-height : 1150px){
     .container_separator_horizontal {
         height: 15dvh;
     }
@@ -113,7 +113,7 @@
     }
 }
 
-@media only screen and (min-device-height: 1150px) and (orientation : portrait){
+@media only screen and (min-device-height: 1150px){
     .container_separator_horizontal {
         height: 16dvh;
     }
@@ -128,18 +128,18 @@
     /* Estilos para desktop */
 }
 
-@media only screen and (min-device-width : 393px) and (max-device-width : 620px) and (orientation : portrait) {
+@media only screen and (min-device-width : 393px) and (max-device-width : 620px) {
 
   
 
 
 }
 
-@media only screen and (min-device-width : 393px) and (max-device-width : 500px) and (orientation : portrait) {
+@media only screen and (min-device-width : 393px) and (max-device-width : 500px) {
    
 }
 
-@media only screen and (min-device-width : 500px) and (max-device-width : 620px) and (orientation : portrait) {
+@media only screen and (min-device-width : 500px) and (max-device-width : 620px) {
     
 }
 
