--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,9 @@ ul {
 }
 
 div h3#iban {
+    text-decoration: none;
+    cursor: default;
+    user-select: none;
     margin: 24px 0;
 }
 
@@ -150,7 +153,7 @@ img.icon-night {
 /* CONTENEDORES GENERALES */
 
 #scrollContainer {
-    overflow-y: hidden!important;
+    overflow-y: hidden !important;
     width: 100%;
     height: 100dvh;
     overflow-y: auto;
@@ -386,7 +389,8 @@ div span.after-dot {
 /* BUTTON */
 
 #float-button {
-    -webkit-tap-highlight-color: transparent; /* for removing the highlight */
+    -webkit-tap-highlight-color: transparent;
+    /* for removing the highlight */
     background: none !important;
     border: none !important;
     outline: none !important;
