--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -27,12 +27,12 @@
     .container_separator_vertical {
         height:7dvh;
     }
-    div span.separator_vertical.last, .container_separator_vertical.last {
+    /* div span.separator_vertical.last, .container_separator_vertical.last {
         height: 20dvh;
     }
     #fourth_ul {
         height: 75dvh;
-    }
+    } */
 }
 
 @media only screen and (min-device-height: 720px) and (max-device-height : 832px){
