--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,7 +62,8 @@ ul {
 }
 
 div h3#iban {
-    text-decoration: none;
+    text-decoration: none!important;
+    color: #F6FAFF;
     cursor: default;
     user-select: none;
     margin: 24px 0;
