--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -227,10 +227,10 @@ div span.separator_vertical,
     height: 4dvh;
 }
 
-/* div span.separator_vertical.last,
+div span.separator_vertical.last,
 .container_separator_vertical.last {
-    height: 10dvh;
-} */
+    height: 8dvh;
+}
 
 
 div span.after-dot {
