borramos div para mostrar tamaañños

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,42 +3,7 @@
 /* Estilos para móviles */
 /* HEIGHT */
 
-@media only screen and (min-device-height: 540px) and (max-device-height : 590px){
-    #first_ul {
-        margin-bottom: 8dvh;
-    }
-    .container_separator_horizontal {
-        height: 10dvh;
-    }
-    div span.separator_vertical,
-    .container_separator_vertical {
-        height: 5dvh;
-    }
-}
-
-@media only screen and (min-device-height: 590px) and (max-device-height : 720px){
-    #first_ul {
-        margin-bottom: 14dvh;
-    }
-    .container_separator_horizontal {
-        height: 9dvh;
-    }
-    div span.separator_vertical,
-    .container_separator_vertical {
-        height:7dvh;
-    }
-    /* div span.separator_vertical.last, .container_separator_vertical.last {
-        height: 20dvh;
-    }
-    #fourth_ul {
-        height: 75dvh;
-    } */
-}
-
-@media only screen and (min-device-height: 720px) and (max-device-height : 832px){
-    #first_ul {
-        margin-bottom: 14dvh;
-    }
+@media only screen and (min-device-height: 720px) and (max-device-height : 832px) and (orientation : portrait){
     .container_separator_horizontal {
         height: 12dvh;
     }
@@ -46,15 +11,9 @@
     .container_separator_vertical {
         height: 10dvh;
     }
-    div span.separator_vertical.last, .container_separator_vertical.last {
-        height: 20dvh;
-    }
-    #fourth_ul {
-        height: 75dvh;
-    }
 }
 
-@media only screen and (min-device-height: 780px) and (max-device-height : 832px){
+@media only screen and (min-device-height: 832px) and (max-device-height : 952px) and (orientation : portrait){
     #first_ul {
         margin-bottom: 14dvh;
     }
@@ -64,90 +23,5 @@
     div span.separator_vertical,
     .container_separator_vertical {
         height: 12dvh;
-    }
-}
-
-
-@media only screen and (min-device-height: 832px) and (max-device-height : 952px){
-    #first_ul {
-        margin-bottom: 14dvh;
-    }
-    .container_separator_horizontal {
-        height: 14dvh;
-    }
-    div span.separator_vertical,
-    .container_separator_vertical {
-        height: 12dvh;
-    }
-    div span.separator_vertical.last, .container_separator_vertical.last {
-        height: 20dvh;
-    }
-    #fourth_ul {
-        height: 75dvh;
-    }
-}
-
-@media only screen and (min-device-height: 952px) and (max-device-height : 1042px){
-    #first_ul {
-        margin-bottom: 14dvh;
-    }
-    .container_separator_horizontal {
-        height: 14dvh;
-    }
-    div span.separator_vertical,
-    .container_separator_vertical {
-        height: 14dvh;
-    }
-    div span.separator_vertical.last, .container_separator_vertical.last {
-        height: 20dvh;
-    }
-    #fourth_ul {
-        height: 75dvh;
-    }
-}
-
-@media only screen and (min-device-height: 1042px) and (max-device-height : 1150px){
-    .container_separator_horizontal {
-        height: 15dvh;
-    }
-    div span.separator_vertical,
-    .container_separator_vertical {
-        height: 16dvh;
-    }
-}
-
-@media only screen and (min-device-height: 1150px){
-    .container_separator_horizontal {
-        height: 16dvh;
-    }
-    div span.separator_vertical,
-    .container_separator_vertical {
-        height: 18dvh;
-    }
-}
-
-
-@media only screen and (min-width: 1024px) {
-    /* Estilos para desktop */
-}
-
-@media only screen and (min-device-width : 393px) and (max-device-width : 620px) {
-
-  
-
-
-}
-
-@media only screen and (min-device-width : 393px) and (max-device-width : 500px) {
-   
-}
-
-@media only screen and (min-device-width : 500px) and (max-device-width : 620px) {
-    
-}
-
-@media only screen and (orientation : landscape) {
-    body, html {
-        display: none;
     }
 }
