--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,10 +62,6 @@ ul {
 }
 
 div h3#iban {
-    text-decoration: none!important;
-    color: #F6FAFF;
-    cursor: default;
-    user-select: none;
     margin: 24px 0;
 }
 
@@ -93,18 +89,6 @@ div h3#iban {
     font-family: "Red Hat Text", serif;
     line-height: 24px;
     margin: 0;
-}
-
-.deviceVH {
-    position: absolute;
-    top: 0;
-    height: 60px;
-    width: -webkit-fill-available;
-}
-
-.deviceVH p {
-    margin: 4px 32px 0;
-    font-size: 14px;
 }
 
 
@@ -154,7 +138,7 @@ img.icon-night {
 /* CONTENEDORES GENERALES */
 
 #scrollContainer {
-    overflow-y: hidden !important;
+    overflow-y: hidden!important;
     width: 100%;
     height: 100dvh;
     overflow-y: auto;
@@ -229,7 +213,7 @@ div span.separator_vertical,
 
 div span.separator_vertical.last,
 .container_separator_vertical.last {
-    height: 8dvh;
+    height: 10dvh;
 }
 
 
@@ -390,8 +374,7 @@ div span.after-dot {
 /* BUTTON */
 
 #float-button {
-    -webkit-tap-highlight-color: transparent;
-    /* for removing the highlight */
+    -webkit-tap-highlight-color: transparent; /* for removing the highlight */
     background: none !important;
     border: none !important;
     outline: none !important;
