--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -127,13 +127,6 @@ img.icon-night {
     z-index: 1;
 }
 
-.background-section div.image-container img {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
-}
 
 /* CONTENEDORES GENERALES */
 
@@ -153,7 +146,7 @@ img.icon-night {
 }
 
 #first_ul {
-    margin-bottom: 6dvh;
+    margin-bottom: 8dvh;
 }
 
 .location_time {
@@ -226,29 +219,23 @@ div span.after-dot {
 /* IMAGE CONTAINER */
 
 .image-container {
-    width: auto;
-    max-width: 100%;
-    overflow: hidden;
-    transition: background 1s ease-in-out;
-}
-
-.image-container img {
-    z-index: 1;
     height: 30dvh;
     width: 100%;
-    display: block;
+    transition: background 1s ease-in-out;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    opacity: 1;
+    z-index: 1;
 }
 
-.image-container::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    opacity: 0.5;
-    transition: opacity 2s ease-in-out;
+
+.image-container img {
+    width: 100%;
+    display: block;
+    transition: opacity 0.5s ease-in-out;
 }
+
 
 #landscape_morning {
     /* display: none; */
@@ -335,10 +322,6 @@ div span.after-dot {
     z-index: -1;
     transition: opacity 0.5s linear;
     opacity: 0;
-}
-
-.image-container {
-    transition: background 1s ease-in-out;
 }
 
 .info-content {
