--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -111,7 +111,7 @@ img.icon-night {
 .sky-container {
     position: absolute;
     top: 0;
-    height: 100dvh !important;
+    height: 100svh !important;
     width: 100%;
 }
 
@@ -133,7 +133,7 @@ img.icon-night {
 #scrollContainer {
     overflow-y: hidden!important;
     width: 100%;
-    height: 100dvh;
+    height: 100svh;
     overflow-y: auto;
     text-align: -webkit-center;
     margin: 0px;
@@ -146,7 +146,7 @@ img.icon-night {
 }
 
 #first_ul {
-    margin-bottom: 8dvh;
+    margin-bottom: 8svh;
 }
 
 .location_time {
@@ -163,7 +163,7 @@ img.icon-night {
 }
 
 #fourth_ul {
-    height: 85dvh;
+    height: 85svh;
 }
 
 
@@ -178,7 +178,7 @@ img.icon-night {
 }
 
 .container_separator_horizontal {
-    height: 9dvh;
+    height: 13svh;
     display: flex;
 }
 
@@ -201,12 +201,12 @@ div span.separator_vertical {
 
 div span.separator_vertical,
 .container_separator_vertical {
-    height: 4dvh;
+    height: 10svh;
 }
 
 div span.separator_vertical.last,
 .container_separator_vertical.last {
-    height: 10dvh;
+    height: 10svh;
 }
 
 
@@ -224,9 +224,9 @@ div span.after-dot {
 
 
 /* IMAGE CONTAINER */
-
+    
 .image-container {
-    height: 30dvh;
+    height: 30svh;
     width: 100%;
     transition: background 1s ease-in-out;
     position: absolute;
@@ -238,7 +238,7 @@ div span.after-dot {
 
 
 .image-container img {
-    width: 100%;
+    width: 101%;
     display: block;
     transition: opacity 0.5s ease-in-out;
 }
@@ -333,7 +333,7 @@ div span.after-dot {
 
 .info-content {
     height: 80px;
-    padding: 16px 0;
+    margin: 16px 0;
 }
 
 #info_afternoon {
@@ -353,7 +353,7 @@ div span.after-dot {
 .flex-container {
     position: absolute;
     bottom: 0;
-    height: 25dvh !important;
+    height: 25svh !important;
     width: 100%;
     z-index: 99999;
     display: flex;
