background aqua para ver si refresca en iphone 6

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,6 +116,7 @@ img.icon-night {
 }
 
 #sky_image {
+    background-color: aqua;
     height: 90%;
     width: -webkit-fill-available;
     object-fit: cover;
