--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -7,35 +7,33 @@
     .image-container {
         align-content: flex-end;
     }
-  }
+}
 
-@media only screen and (min-device-height: 600px) and (max-device-height : 720px) and (orientation : portrait){
+@media only screen and (min-device-height: 700px) and (max-device-height : 832px) and (orientation : portrait) {
     .container_separator_horizontal {
         height: 13svh;
     }
+
     div span.separator_vertical,
     .container_separator_vertical {
         height: 10svh;
     }
-}
 
-@media only screen and (min-device-height: 720px) and (max-device-height : 832px) and (orientation : portrait){
-    .container_separator_horizontal {
-        height: 12svh;
-    }
-    div span.separator_vertical,
-    .container_separator_vertical {
-        height: 10svh;
+    div span.separator_vertical.last,
+    .container_separator_vertical.last {
+        height: 14svh;
     }
 }
 
-@media only screen and (min-device-height: 832px) and (max-device-height : 952px) and (orientation : portrait){
+@media only screen and (min-device-height: 832px) and (max-device-height : 952px) and (orientation : portrait) {
     #first_ul {
         margin-bottom: 14svh;
     }
+
     .container_separator_horizontal {
         height: 13svh;
     }
+
     div span.separator_vertical,
     .container_separator_vertical {
         height: 12svh;
