--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -9,7 +9,23 @@
     }
 }
 
-@media only screen and (min-device-height: 700px) and (max-device-height : 832px) and (orientation : portrait) {
+@media only screen and (min-device-height: 645px) and (max-device-height : 720px) and (orientation : portrait) {
+    .container_separator_horizontal {
+        height: 13svh;
+    }
+
+    div span.separator_vertical,
+    .container_separator_vertical {
+        height: 10svh;
+    }
+
+    div span.separator_vertical.last,
+    .container_separator_vertical.last {
+        height: 14svh;
+    }
+}
+
+@media only screen and (min-device-height: 720px) and (max-device-height : 832px) and (orientation : portrait) {
     .container_separator_horizontal {
         height: 13svh;
     }
