--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -146,7 +146,7 @@ img.icon-night {
 }
 
 #first_ul {
-    margin-bottom: 10svh;
+    margin-bottom: 9svh;
 }
 
 .location_time {
@@ -157,6 +157,10 @@ img.icon-night {
 }
 
 .ul_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 85svh!important;
     position: relative;
     opacity: 1 !important;
     margin: 0px;
@@ -178,7 +182,7 @@ img.icon-night {
 }
 
 .container_separator_horizontal {
-    height: 10svh;
+    height: 7svh;
     display: flex;
 }
 
@@ -201,7 +205,7 @@ div span.separator_vertical {
 
 div span.separator_vertical,
 .container_separator_vertical {
-    height: 6svh;
+    height: 2svh;
 }
 
 div span.separator_vertical.last,
@@ -268,7 +272,6 @@ div span.after-dot {
     background-image: linear-gradient(to top right, #80EDEB 0%, #FFFFF1 100%);
     z-index: -1;
     transition: opacity 0.5s linear;
-    opacity: 0;
 }
 
 .afternoon {
@@ -288,7 +291,6 @@ div span.after-dot {
     background-image: linear-gradient(to top right, #80EDEB 0%, #FFFFF1 100%);
     z-index: -1;
     transition: opacity 0.5s linear;
-    opacity: 0;
 }
 
 .evening {
@@ -308,7 +310,6 @@ div span.after-dot {
     background: linear-gradient(180deg, rgba(255, 121, 121, 1) 20%, rgba(239, 219, 33, 1) 100%);
     z-index: -1;
     transition: opacity 0.5s linear;
-    opacity: 0;
 }
 
 .night {
@@ -328,7 +329,6 @@ div span.after-dot {
     background: linear-gradient(147deg, #5784c7 0%, #081c50 72%, #080d3d 100%);
     z-index: -1;
     transition: opacity 0.5s linear;
-    opacity: 0;
 }
 
 .info-content {
