--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -9,6 +9,12 @@
     }
 }
 
+@media (orientation : landscape) {
+    body {
+        display: none;    
+    }
+}
+
 @media only screen and (min-device-height: 645px) and (max-device-height : 720px) and (orientation : portrait) {
     /* .container_separator_horizontal {
         height: 13svh;
