--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,6 +112,7 @@ img.icon-night {
     position: absolute;
     top: 0;
     height: 100svh !important;
+    max-height: 900px;
     width: 100%;
 }
 
@@ -123,6 +124,8 @@ img.icon-night {
 }
 
 .background-section {
+    max-width: 480px;
+    max-height: 1000px;
     width: 100%;
     height: 100%;
     z-index: 1;
@@ -147,6 +150,7 @@ img.icon-night {
 }
 
 #first_ul {
+    max-height: 720px;
     margin-bottom: 9svh;
 }
 
