--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,6 +3,11 @@
 /* Estilos para móviles */
 /* HEIGHT */
 
+@media only screen and (min-device-height: 10px) and (max-device-height : 515px) {
+    .li_padding {}
+
+}
+
 @media (min-height: 600px) {
     .image-container {
         align-content: flex-end;
@@ -15,7 +20,7 @@
     } */
 }
 
-@media only screen and (min-device-height: 645px) and (max-device-height : 720px) {
+@media only screen and (min-device-height: 645px) {
     .image-container {
         bottom: -4%;
     }
@@ -26,37 +31,37 @@
 
 }
 
-@media only screen and (min-device-height: 720px) and (max-device-height : 1000px) {
+@media only screen and (min-device-height: 720px) and (max-device-height : 900px) {
     .container_separator_horizontal {
-        height: 20svh;
+        height: 16svh;
     }
 }
 
-@media only screen and (min-device-height: 1001px) {
+
+
+@media only screen and (min-device-height: 901px) {
     .ul_container { 
-        height: 786px !important;
-    }
-    /* span.separator_vertical {
-        height: 80px;;
-    } */
-    .container_separator_horizontal {
-        height: 320px;
+       height: 740px !important;
     }
 }
 
-@media only screen and (min-device-height: 1000px) {
+@media only screen and (min-device-height: 900px) {
     #last_separator_line {
         height: 60svh;
     }
+    .flex-container {
+        height: 230px!important;
+    }
 }
 
-@media only screen and (min-device-width : 480px), only screen and (min-height: 1000px) {
+@media only screen and (min-device-width : 480px), only screen and (min-height: 900px) {
     #scrollContainer {
-        height: 1000px;
+        max-height: 900px;
     }
 
     .background-section {
-        box-shadow: -8px 8px 16px 16px #0000008F;
+        max-height: 900px;
+        box-shadow: -8px 8px 16px 4px #0000008F;
     }
 
     body {
@@ -69,10 +74,4 @@
     .image-container {
         bottom: 0%;
     }
-}
-
-@media only screen and (min-device-width : 1281px) {
-    /* body {
-        background-size: auto;
-    } */
 }
