--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -189,8 +189,17 @@ img.icon-night {
 
 /* SEPARATORS */
 
-.separator {
+.separator_container {
     height: 8%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* flex: 1; */
+    position: relative;
+}
+
+.separator {
     width: 1px;
     content: '';
     display: block;
