--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -35,7 +35,7 @@
 
 @media only screen and (min-device-height: 901px) {
     .ul_container { 
-       height: 740px !important;
+       max-height: 740px !important;
     }
     span.separator_vertical {
         height: 30px;
@@ -46,10 +46,10 @@
 }
 
 @media only screen and (min-device-height: 900px) {
-    #last_separator_line {
+    /* #last_separator_line {
         max-height: 570px!important;
         height: 60svh;
-    }
+    } */
     .flex-container {
         height: 230px!important;
     }
