imagen de fondo centrada

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -68,6 +68,7 @@
     body {
         background-image: url(../images/desktop_background_wood.png);
         background-repeat: no-repeat;
+        background-position: center;
         background-size: cover;
         min-height: 100vh;
     }
