--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,9 +6,12 @@
 /* Desactiva la selección de texto para todos los elementos */
 * {
     user-select: none;
-    -webkit-user-select: none; /* Chrome, Safari, Opera */
-    -moz-user-select: none;    /* Firefox */
-    -ms-user-select: none;     /* Internet Explorer/Edge */
+    -webkit-user-select: none;
+    /* Chrome, Safari, Opera */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
 }
 
 /* ELEMENTOS HTML */
@@ -116,7 +119,8 @@ img.icon-night {
 
 /* IMAGENES */
 
-#landscape_image, #sky_image {
+#landscape_image,
+#sky_image {
     transition: opacity 1s ease-in-out;
 }
 
@@ -168,7 +172,7 @@ img.icon-night {
 /* CONTENEDORES GENERALES */
 
 #scrollContainer {
-    overflow-y: hidden!important;
+    overflow-y: hidden !important;
     width: 100%;
     height: 100svh;
     overflow-y: auto;
@@ -199,7 +203,7 @@ img.icon-night {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 80svh!important;
+    height: 80svh !important;
     position: relative;
     margin: 0px;
 }
@@ -263,7 +267,7 @@ span.separator_vertical {
 }
 
 .transparent {
-    background-color: transparent!important;
+    background-color: transparent !important;
 }
 
 div span.after-dot {
@@ -284,7 +288,7 @@ div span.after-dot {
 
 
 /* IMAGE CONTAINER */
-    
+
 .image-container {
     display: flex;
     height: 30svh;
@@ -420,8 +424,66 @@ div span.after-dot {
 
 /* BUTTON */
 
+@keyframes buttonClickAnimation {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    10% {
+        transform: scale(1.05);
+        opacity: 1;
+    }
+
+    /* 20% {
+        visibility: hidden;
+    }
+
+    35% {
+        visibility:hidden;
+    }
+
+    50% {
+        transform: scale(1);
+        opacity: 1;
+    } */
+}
+
+@keyframes rotate180 {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(-180deg);
+    }
+}
+
+#button-image.rotate {
+    animation: rotate180 1s forwards;
+}
+
+@keyframes rotateBack180 {
+    0% {
+        transform: rotate(-180deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+#button-image.rotate-back {
+    animation: rotateBack180 1s forwards;
+}
+
+#float-button.clicked {
+    animation: buttonClickAnimation 1s forwards;
+    will-change: opacity, transform, display;
+    cursor: pointer;
+}
+
 #float-button {
-    -webkit-tap-highlight-color: transparent; /* for removing the highlight */
+    -webkit-tap-highlight-color: transparent;
+    /* for removing the highlight */
     background: none !important;
     border: none !important;
     outline: none !important;
@@ -433,7 +495,7 @@ div span.after-dot {
 }
 
 #float-button:active {
-    opacity: 0.8 !important;
+    opacity: 0.85 !important;
     /* Opacidad al estar activo */
 }
 
@@ -444,7 +506,7 @@ div span.after-dot {
 
 
 #float-button:not(:hover):not(:active) {
-    opacity: 0.56 !important;
+    opacity: 0.85 !important;
     /* Opacidad predeterminada cuando no está en :hover ni :active */
 }
 
