--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -17,7 +17,7 @@
 
 @media only screen and (min-device-height: 645px) {
     .image-container {
-        bottom: -4%;
+        /* bottom: -4%; */
     }
 
     .container_separator_horizontal {
