--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -292,6 +292,7 @@ div span.after-dot {
 .image-container {
     display: flex;
     height: 30svh;
+    max-height: 270px;
     width: 100%;
     transition: background 1s ease-in-out;
     position: absolute;
