--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -572,3 +572,19 @@ div span.after-dot {
 #float-button.disabled {
     pointer-events: none;
 }
+
+/* NOTIFICATION */
+
+#notification {
+    width: max-content;
+    display: none;
+    position: fixed;
+    bottom: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 1000;
+}
