imagen madera fondo

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -87,7 +87,7 @@
     }
 
     body {
-        background-image: url(../images/desktop_background_wood.png);
+        background-image: url(../images/desktop_background_wood.jpeg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
