--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,20 @@ html {
     scroll-behavior: smooth;
 }
 
+body.loading #fixed {
+    display: none;
+}
+
+body.loaded #fixed {
+    display: block;
+    animation: bodyFadeIn 1s ease-in;
+}
+
+@keyframes bodyFadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 h1,
 h2,
 h3 {
